--- a/artifacthub-repo.yml
+++ b/artifacthub-repo.yml
@@ -12,4 +12,4 @@
 repositoryID: 4612157a-4c0a-4ce7-b7ac-b5536bbef4f2
 owners: # (optional, used to claim repository ownership)
   - name: thomaspoignant
-    email: thomas.poignant@gofeatureflag.org
+    email: thomas.poignant@gmail.com
